test/libsolidity/syntaxTests/dataLocations/publicFunction/public_function_return_parameters_no_data_location.sol
contract C {
    function h() public pure returns(uint[]) {}
}
// ----
// TypeError: (50-56): Location must be specified as "memory" for parameters in publicly visible functions.
